--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "axios": "^1.1.2",
     "core-js": "^3.8.3",
+    "daisyui": "^2.31.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-google-oauth": "^1.0.5",
+    "vue-google-oauth2": "^1.5.8",
+    "vue-router": "^4.0.3",
+    "vue3-google-oauth2": "^1.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
