--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,14 @@
     "axios": "^1.1.2",
     "core-js": "^3.8.3",
     "daisyui": "^2.31.0",
+    "facebook-login-vuejs": "^2.1.3",
+    "http2": "^3.3.7",
     "tw-elements": "^1.0.0-alpha12",
     "vue": "^3.2.13",
     "vue-google-oauth": "^1.0.5",
     "vue-google-oauth2": "^1.5.8",
     "vue-router": "^4.0.3",
+    "vue3-google-login": "^2.0.12",
     "vue3-google-oauth2": "^1.0.6"
   },
   "devDependencies": {
