--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,9 @@
     "http2": "^3.3.7",
     "tw-elements": "^1.0.0-alpha12",
     "vue": "^3.2.13",
-    "vue-google-oauth": "^1.0.5",
-    "vue-google-oauth2": "^1.5.8",
     "vue-router": "^4.0.3",
-    "vue3-google-login": "^2.0.12",
-    "vue3-google-oauth2": "^1.0.6"
+    "vue-sweetalert2": "^5.0.5",
+    "vue3-google-login": "^2.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
