--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@vue-stripe/vue-stripe": "^4.4.4",
     "axios": "^1.1.2",
     "core-js": "^3.8.3",
     "daisyui": "^2.31.0",
