--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "daisyui": "^2.31.0",
     "facebook-login-vuejs": "^2.1.3",
     "http2": "^3.3.7",
+    "moment": "^2.29.4",
     "tw-elements": "^1.0.0-alpha12",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
