--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,20 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@google-pay/button-element": "^3.0.0",
     "@vue-stripe/vue-stripe": "^4.4.4",
     "axios": "^1.1.2",
     "core-js": "^3.8.3",
     "daisyui": "^2.31.0",
+    "dompurify": "^2.4.0",
     "facebook-login-vuejs": "^2.1.3",
+    "gmail-js": "^1.1.6",
     "http2": "^3.3.7",
     "moment": "^2.29.4",
     "tw-elements": "^1.0.0-alpha12",
     "vue": "^3.2.13",
+    "vue-loader": "^15.7.1",
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5",
     "vue3-google-login": "^2.0.12"
