--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.4",
     "tw-elements": "^1.0.0-alpha12",
     "vue": "^3.2.13",
+    "vue-cryptojs": "^2.3.1",
     "vue-loader": "^15.7.1",
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5",
