--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@google-pay/button-element": "^3.0.0",
+    "@headlessui/vue": "^1.7.3",
+    "@heroicons/vue": "^2.0.12",
     "@vue-stripe/vue-stripe": "^4.4.4",
     "axios": "^1.1.2",
     "core-js": "^3.8.3",
