--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "vue-cryptojs": "^2.3.1",
     "vue-loader": "^15.7.1",
     "vue-mailchimp-email-signup-form": "^1.1.2",
+    "vue-moment": "^4.1.0",
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5",
     "vue3-google-login": "^2.0.12"
