--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@google-pay/button-element": "^3.0.0",
+    "@growthbunker/vueflags": "^0.1.14",
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.12",
     "@vue-stripe/vue-stripe": "^4.4.4",
@@ -28,6 +29,8 @@
     "moment": "^2.29.4",
     "tw-elements": "^1.0.0-alpha12",
     "vue": "^3.2.13",
+    "vue-country-code": "^1.1.3",
+    "vue-country-flag-next": "^2.3.2",
     "vue-cryptojs": "^2.3.1",
     "vue-loader": "^15.7.1",
     "vue-mailchimp-email-signup-form": "^1.1.2",
