--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,15 +18,18 @@
     "@growthbunker/vueflags": "^0.1.14",
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.12",
+    "@mdi/font": "5.9.55",
     "@vue-stripe/vue-stripe": "^4.4.4",
     "axios": "^1.1.2",
     "core-js": "^3.8.3",
     "daisyui": "^2.31.0",
+    "dateformat": "^5.0.3",
     "dompurify": "^2.4.0",
     "facebook-login-vuejs": "^2.1.3",
     "gmail-js": "^1.1.6",
     "http2": "^3.3.7",
     "moment": "^2.29.4",
+    "roboto-fontface": "*",
     "tw-elements": "^1.0.0-alpha12",
     "vue": "^3.2.13",
     "vue-country-code": "^1.1.3",
@@ -37,7 +40,8 @@
     "vue-moment": "^4.1.0",
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5",
-    "vue3-google-login": "^2.0.12"
+    "vue3-google-login": "^2.0.12",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
