--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
+        "lucasdotvin/laravel-soulbscription": "^3.0",
         "stripe/stripe-php": "^9.9"
     },
     "require-dev": {
