--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,6 +12,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "lucasdotvin/laravel-soulbscription": "^3.0",
+        "payway/payway": "^1.0",
         "stripe/stripe-php": "^9.9"
     },
     "require-dev": {
