--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@heroicons/vue": "^2.0.12",
     "@mdi/font": "5.9.55",
     "@vue-stripe/vue-stripe": "^4.4.4",
+    "animate.css": "^4.1.1",
     "axios": "^1.1.2",
     "core-js": "^3.8.3",
     "daisyui": "^2.31.0",
