--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "daisyui": "^2.31.0",
     "dateformat": "^5.0.3",
     "dompurify": "^2.4.0",
+    "facebook-login": "^1.4.1",
     "facebook-login-vuejs": "^2.1.3",
     "gmail-js": "^1.1.6",
     "http2": "^3.3.7",
@@ -57,7 +58,8 @@
     "postcss": "^8.4.17",
     "sass": "^1.55.0",
     "sass-loader": "^10.3.1",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "vue-github": "^0.12.0"
   },
   "eslintConfig": {
     "root": true,
