--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "vue-loader": "^15.7.1",
     "vue-mailchimp-email-signup-form": "^1.1.2",
     "vue-moment": "^4.1.0",
+    "vue-plugin-load-script": "^2.1.1",
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5",
     "vue3-google-login": "^2.0.12",
@@ -49,12 +50,12 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.12",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^8.7.1",
     "postcss": "^8.4.17",
     "sass": "^1.55.0",
     "sass-loader": "^10.3.1",
